...
                    hintText: 'Tambahkan catatan pelanggan',
                    controller: _catatanController,
                    maxLines: 2,
                  ),
                  const SizedBox(height: 32),
                  CustomButton(
                    label: widget.pelangganId != null ? 'Update' : 'Simpan',
                    isLoading: _isSubmitting,
                    onPressed: _handleSubmit,
                  ),
                ],
              ),
            ),
...
