...
          badgeKey: 'pesanan',
        ),
        SidebarMenuItem(
          index: 3,
          icon: Icons.inventory_2_outlined,
          iconSelected: Icons.inventory_2_rounded,
          label: 'Manajemen Stok',
          section: 'menu',
        ),
      ];
    } else if (userRole == 'staf_penjualan') {
      _screens = [
        dashboardScreen,
...
